add the rest of the processing